--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hack or Snooze</title>
-  <link rel="stylesheet" 
-        href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/user.css">
   <link rel="stylesheet" href="css/stories.css">
@@ -29,75 +28,98 @@
 
 <body>
 
-<!-- top navigation bar -->
-<nav>
-  <div class="navbar-brand">
-    <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
-  </div>
-  <div class="nav-right">
-    <a class="nav-link" href="#" id="nav-login">login/signup</a>
-    <a class="nav-link" href="#" id="nav-user-profile"></a>
-    <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
-  </div>
-</nav>
-
-<!-- area for stories (all stories, user stories, favorites) -->
-<section class="stories-container container">
-
-  <!-- loading message (removed by JS after stories loaded) -->
-  <div id="stories-loading-msg">Loading&hellip;</div>
-
-  <!-- List of all stories -->
-  <ol id="all-stories-list" class="stories-list"></ol>
-
-</section>
-
-<!-- Login and signup forms -->
-<section class="account-forms-container container">
-
-  <!-- Login form -->
-  <form id="login-form" class="account-form hidden">
-    <h4>Login</h4>
-    <div class="login-input">
-      <label for="login-username">username</label>
-      <input id="login-username" autocomplete="current-username">
+  <!-- top navigation bar -->
+  <nav>
+    <div class="navbar-brand">
+      <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
+      <a class="nav-link" href="#" id="nav-submit">Submit</a>
     </div>
-    <div class="login-input">
-      <label for="login-password">password</label>
-      <input id="login-password" type="password" autocomplete="current-password">
+    <div class="nav-right">
+      <a class="nav-link" href="#" id="nav-login">login/signup</a>
+      <a class="nav-link" href="#" id="nav-user-profile"></a>
+      <a class="hidden" id="nav-logout" href="#"><small>(logout)</small></a>
     </div>
-    <button type="submit">login</button>
-    <hr>
-  </form>
+  </nav>
 
-  <!-- Signup form -->
-  <form id="signup-form" class="account-form hidden">
-    <h4>Create Account</h4>
-    <div class="login-input">
-      <label for="signup-name">name</label>
-      <input id="signup-name" autocapitalize="words">
-    </div>
-    <div class="login-input">
-      <label for="signup-username">username</label>
-      <input id="signup-username" autocomplete="new-username">
-    </div>
-    <div class="login-input">
-      <label for="signup-password">password</label>
-      <input id="signup-password" autocomplete="new-password" type="password">
-    </div>
-    <button type="submit">create account</button>
-  </form>
-</section>
+  <!-- Submit story form-->
+  <section class="submit-form-container container">
+    <form id="story-submit-form" class="story-form hidden">
+      <h4>Submit Story</h4>
+      <div class="story-input">
+        <label for="story-author">author</label>
+        <input id="story-author">
+      </div>
+      <div class="story-input">
+        <label for="story-title">title</label>
+        <input id="story-title">
+      </div>
+      <div class="story-input">
+        <label for="story-url">password</label>
+        <input id="story-url">
+      </div>
+      <button type="submit">submit story</button>
+      <hr>
+    </form>
+  </section>
 
-<!-- Library JS & our JS -->
-<script src="https://unpkg.com/jquery"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <!-- area for stories (all stories, user stories, favorites) -->
+  <section class="stories-container container">
 
-<script src="js/models.js"></script>
-<script src="js/main.js"></script>
-<script src="js/nav.js"></script>
-<script src="js/user.js"></script>
-<script src="js/stories.js"></script>
+    <!-- loading message (removed by JS after stories loaded) -->
+    <div id="stories-loading-msg">Loading&hellip;</div>
+
+    <!-- List of all stories -->
+    <ol id="all-stories-list" class="stories-list"></ol>
+
+  </section>
+
+  <!-- Login and signup forms -->
+  <section class="account-forms-container container">
+
+    <!-- Login form -->
+    <form id="login-form" class="account-form hidden">
+      <h4>Login</h4>
+      <div class="login-input">
+        <label for="login-username">username</label>
+        <input id="login-username" autocomplete="current-username">
+      </div>
+      <div class="login-input">
+        <label for="login-password">password</label>
+        <input id="login-password" type="password" autocomplete="current-password">
+      </div>
+      <button type="submit">login</button>
+      <hr>
+    </form>
+
+    <!-- Signup form -->
+    <form id="signup-form" class="account-form hidden">
+      <h4>Create Account</h4>
+      <div class="login-input">
+        <label for="signup-name">name</label>
+        <input id="signup-name" autocapitalize="words">
+      </div>
+      <div class="login-input">
+        <label for="signup-username">username</label>
+        <input id="signup-username" autocomplete="new-username">
+      </div>
+      <div class="login-input">
+        <label for="signup-password">password</label>
+        <input id="signup-password" autocomplete="new-password" type="password">
+      </div>
+      <button type="submit">create account</button>
+    </form>
+  </section>
+
+  <!-- Library JS & our JS -->
+  <script src="https://unpkg.com/jquery"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+
+  <script src="js/models.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/nav.js"></script>
+  <script src="js/user.js"></script>
+  <script src="js/stories.js"></script>
 
 </body>
+
 </html>
