added submitUserStory function. started cleaning up some old functions

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <input id="story-title">
       </div>
       <div class="story-input">
-        <label for="story-url">password</label>
+        <label for="story-url">url</label>
         <input id="story-url">
       </div>
       <button type="submit">submit story</button>
