added favorites page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="navbar-brand">
       <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
       <a class="nav-link" href="#" id="nav-submit">Submit</a>
+      <a class="nav-link" href="#" id="nav-favorites">Favorites</a>
     </div>
     <div class="nav-right">
       <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -61,7 +62,10 @@
       <hr>
     </form>
   </section>
-
+  <!-- area for the user's favorited stories-->
+  <section class="favorites-container containter">
+    <ol id="favorite-stories-list" class="stories-list hidden"></ol>
+  </section>
   <!-- area for stories (all stories, user stories, favorites) -->
   <section class="stories-container container">
 
