did a bit of cleanup

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
       <hr>
     </form>
   </section>
-  <!-- area for the user's favorited stories-->
-  <section class="favorites-container containter">
-    <ol id="favorite-stories-list" class="stories-list hidden"></ol>
-  </section>
+
   <!-- area for stories (all stories, user stories, favorites) -->
   <section class="stories-container container">
 
@@ -75,6 +72,8 @@
     <!-- List of all stories -->
     <ol id="all-stories-list" class="stories-list"></ol>
 
+      <!-- List of favorite stories-->
+    <ol id="favorite-stories-list" class="stories-list hidden"></ol>
   </section>
 
   <!-- Login and signup forms -->
