we have a My Stories tab now. We have a function to delete stories, but it is not in use at the moment

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
       <a class="nav-link" href="#" id="nav-submit">Submit</a>
       <a class="nav-link" href="#" id="nav-favorites">Favorites</a>
+      <a class="nav-link" href="#" id="nav-own-stories">My Stories</a>
     </div>
     <div class="nav-right">
       <a class="nav-link" href="#" id="nav-login">login/signup</a>
@@ -72,8 +73,11 @@
     <!-- List of all stories -->
     <ol id="all-stories-list" class="stories-list"></ol>
 
-      <!-- List of favorite stories-->
+    <!-- List of favorite stories-->
     <ol id="favorite-stories-list" class="stories-list hidden"></ol>
+
+    <!-- List of favorite stories-->
+    <ol id="own-stories-list" class="stories-list hidden"></ol>
   </section>
 
   <!-- Login and signup forms -->
